test/users/engin/sparse_bulk/sparseBulkBoundsCheck.good
sparseBulkBoundsCheck.chpl:19: error: halt reached - Sparse domain/array index out of bounds: (8, 8) (expected to be within {0..7, 0..7})
